@@ -4,11 +4,14 @@ plugins {
     id("io.spring.dependency-management") version "1.1.5"
 }
 
-group = "net.leibi"
-version = "0.0.1-SNAPSHOT"
-
 java {
     sourceCompatibility = JavaVersion.VERSION_21
+}
+
+configurations {
+    compileOnly {
+        extendsFrom(configurations.annotationProcessor.get())
+    }
 }
 
 repositories {
@@ -17,10 +20,21 @@ repositories {
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
+    implementation("com.google.auto.service:auto-service:1.1.1")
+    compileOnly("org.projectlombok:lombok")
+    annotationProcessor("org.projectlombok:lombok")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+}
+
+tasks.withType<JavaCompile> {
+//    options.compilerArgs.add("--enable-preview")
+    options.compilerArgs.add("-XprintProcessorInfo")
+    //options.compilerArgs.add("-XprintRounds")
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
 }
+
+//reckonTagCreate.dependsOn check
